[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/Kenney Thick.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Title.gd" type="Script" id=2]
[ext_resource path="res://assets/ui_base/blue_button00.png" type="Texture" id=3]
[ext_resource path="res://assets/ui_base/green_button00.png" type="Texture" id=4]
[ext_resource path="res://assets/ui_base/yellow_button00.png" type="Texture" id=5]
[ext_resource path="res://assets/ui_base/grey_button00.png" type="Texture" id=6]
[ext_resource path="res://default_theme.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "intro"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TitleText:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -360.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Title" type="Node2D"]
script = ExtResource( 2 )

[node name="TitleText" type="Node2D" parent="."]
position = Vector2( 300, 150 )
scale = Vector2( 1e-05, 1e-05 )

[node name="RichTextLabel" type="RichTextLabel" parent="TitleText"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -100.0
margin_right = 300.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 200 )
theme = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "
[center][rainbow]Ken Ken Revolution[/rainbow][/center]"
text = "
Ken Ken Revolution"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pivot" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 300, 400 )
rotation = -6.28319

[node name="Level1" type="TextureButton" parent="Pivot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = -29.0
rect_min_size = Vector2( 128, 30 )
theme = ExtResource( 7 )
texture_normal = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pivot/Level1"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 35 )
size_flags_vertical = 1
text = "Level 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level2" type="TextureButton" parent="Pivot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -15.0
margin_right = -32.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 35 )
theme = ExtResource( 7 )
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pivot/Level2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 35 )
text = "Level 2"
align = 1
valign = 1

[node name="Level3" type="TextureButton" parent="Pivot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = 40.0
margin_right = 64.0
margin_bottom = 75.0
rect_min_size = Vector2( 128, 35 )
theme = ExtResource( 7 )
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pivot/Level3"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 35 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level 3"
align = 1
valign = 1

[node name="Scores" type="TextureButton" parent="Pivot"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 34.0
margin_top = -15.0
margin_right = 162.0
margin_bottom = 20.0
rect_min_size = Vector2( 128, 35 )
theme = ExtResource( 7 )
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Pivot/Scores"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 35 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Scores"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
anims/intro = SubResource( 3 )

[connection signal="pressed" from="Pivot/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="Pivot/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="Pivot/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="Pivot/Scores" to="." method="_on_Scores_pressed"]
